force-app/main/default/objects/Game__c/fields/ActivePlayer__c.field-meta.xml
<CustomField>
    <fullName>ActivePlayer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Player</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Games</relationshipLabel>
    <relationshipName>GameActivePlayers</relationshipName>
    <type>Lookup</type>
</CustomField>