force-app/main/default/objects/Game__c/fields/CurrentTurn__c.field-meta.xml
<CustomField>
    <fullName>CurrentTurn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Turn</label>
    <referenceTo>Turn__c</referenceTo>
    <relationshipLabel>Current Turn Games</relationshipLabel>
    <relationshipName>CurrentTurnGames</relationshipName>
    <type>Lookup</type>
</CustomField>