force-app/main/default/objects/Game__c/fields/FreeParkingBank__c.field-meta.xml
<CustomField>
    <fullName>FreeParkingBank__c</fullName>
    <label>Free Parking Bank</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>