force-app/main/default/objects/Game__c/fields/HotelsAvailable__c.field-meta.xml
<CustomField>
    <fullName>HotelsAvailable__c</fullName>
    <formula>HotelsTotal__c - HotelsPurchased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotels Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>