force-app/main/default/objects/Game__c/fields/HotelsPurchased__c.field-meta.xml
<CustomField>
    <fullName>HotelsPurchased__c</fullName>
    <label>Hotels Purchased</label>
    <summarizedField>GameProperty__c.Hotel__c</summarizedField>
    <summaryForeignKey>GameProperty__c.Game__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>