force-app/main/default/objects/Game__c/fields/HotelsTotal__c.field-meta.xml
<CustomField>
    <fullName>HotelsTotal__c</fullName>
    <defaultValue>12</defaultValue>
    <label>Hotels Total</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>