force-app/main/default/objects/Game__c/fields/HousesAvailable__c.field-meta.xml
<CustomField>
    <fullName>HousesAvailable__c</fullName>
    <formula>HousesTotal__c - HousesPurchased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Houses Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>