force-app/main/default/objects/Game__c/fields/HousesPurchased__c.field-meta.xml
<CustomField>
    <fullName>HousesPurchased__c</fullName>
    <label>Houses Purchased</label>
    <summarizedField>GameProperty__c.Houses__c</summarizedField>
    <summaryForeignKey>GameProperty__c.Game__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>