force-app/main/default/objects/Game__c/fields/HousesTotal__c.field-meta.xml
<CustomField>
    <fullName>HousesTotal__c</fullName>
    <defaultValue>32</defaultValue>
    <label>Houses Total</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>